tests/rosetta/out/C/bioinformatics-base-count.error
cc: exit status 1
/tmp/bioinformatics-base-count.c: In function ‘_mochi_main’:
/tmp/bioinformatics-base-count.c:88:38: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
   88 |     printf("%s\n", padLeft(tmp13, 5) + ": " + tmp14);
      |                    ~~~~~~~~~~~~~~~~~ ^
      |                    |                 |
      |                    char *            char *
/tmp/bioinformatics-base-count.c:113:28: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  113 |   printf("%s\n", "    A: " + padLeft(tmp15, 3));
      |                  ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                  |           |
      |                  char *      char *
/tmp/bioinformatics-base-count.c:115:28: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  115 |   printf("%s\n", "    C: " + padLeft(tmp16, 3));
      |                  ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                  |           |
      |                  char *      char *
/tmp/bioinformatics-base-count.c:117:28: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  117 |   printf("%s\n", "    G: " + padLeft(tmp17, 3));
      |                  ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                  |           |
      |                  char *      char *
/tmp/bioinformatics-base-count.c:119:28: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  119 |   printf("%s\n", "    T: " + padLeft(tmp18, 3));
      |                  ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                  |           |
      |                  char *      char *
